feat: add custom "Pariqas" font and update default font-family in app styles

--- a/Pariqas.Web/wwwroot/css/app.css
+++ b/Pariqas.Web/wwwroot/css/app.css
@@ -1,5 +1,10 @@
+@font-face {
+    "font-family": "Pariqas";
+    src: url("../fonts/pariqas.woff2") format("woff");
+}
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: "Pariqas", 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1:focus {
